# maxland

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .unittest.cfg  LICENSE  Makefile  README.md  coverage.xml  install.py  maxland.bat  maxland.json  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  user_settings.py  usersettings.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml
C:\maxland/: C:\maxland.json
behavior/: environment.yml  statemachine.py
docs/: CONTRIBUTING.md  Makefile  conf.py  index.rst  maxland.rst  modules.rst  requirements.txt  setup.cfg
examples/: mp-events.py  multiprocessing-events.py  multiprocessing-example.py  output_waveplayer.py  psychopy-complex-stimuli.py  psychopy-grating-example-simple.py  psychopy-gratings.py  read_bnc_test.py  read_write_bnc.py  rotary_encder_direct.py  sedn_ttlt.py  softcode_test.py  trial.py  valve.py  valve_test.py  wave_player.m  write_bnc.py
maxland_TRAINING01/: maxland_TRAINING01.json  user_settings.py
modules/: backup_stimulus_conf.py  helperfunctions.py  parameter_handler.py  probability_conf.py  probability_gambl.py  probability_gamble.py  rotaryencoder.py  stimulus.py  stimulus_conf.py  stimulus_gamble.py  userinput.py  usersettings.py
openephys/: intan_64  openephys_sync.ipynb  sync_postprocessing.py
scripts/: generate_rules_confidentiality_task.py  maxland.bat  openephys_fileformat.py  openephys_remote.py  openephys_sync.ipynb  parameter_handler.py  populate_project.py  probability.py  session_io.py  (+5 more)
(+212 files in other folders)
