[metadata]

name = maxland
version = 0.2.0
license = GNU GPL
license_files =
    LICENSE
author = Maximilian Hoheiser
author_email = max.hoheiser@gmail.com
description = Maxland libraries to controle the traekka training and recording box
long_description = file: README.rst
long_description_content_type = text/markdown
package_dir = {: maxland}
packages = find_packages(where = maxland)
python_requires = >=3.8

[options]
package_dir =
    = src
packages = maxland
python_requires = >=3.8
install_requires =
    numpy>=1.20.3
    PsychoPy>=2021.1.4,<2022.1.0
    pybpod>=1.7.5
    pybpod-api>=1.8.1
    mypy>=0.720
    PyOpenGL-accelerate>=3.1.5
test_suite = nose2.collector.collector

[unittest]
start-dir = tests
code-directories = src/maxland
                   scripts
                   tasks
test-file-pattern = *_test.py
test-method-prefix = t B verbose
plugins = nose2.plugins.output-buffer
